Add basic OpenGL shader programs and refactor buffer swaps
Add new shader programs to the OpenGL renderer, including basic vertex and fragment shaders, along with a pulsing triangle shader. Refactor buffer swap functionality by moving it from platform-specific implementations to a common renderer function. This ensures consistent buffer swapping across different platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_library(cstrl SHARED
         src/util/file_helpers.h
         extern/stb/stb_image.c
         extern/stb/stb_image.h
+        src/renderer/opengl/opengl_shader_programs.h
 )
 
 add_executable(cstrl-test
