Add mouse button event handling and update X11 linking.
Introduced handling of mouse button press and release events on Linux platform by mapping X11 button events to internal enums. Updated CMake configuration to search for X11 package instead of XFixes and conditionally link with Xfixes if X11 is found. This change improves code consistency and ensures proper event handling for mouse interactions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,7 @@ set(CMAKE_C_STANDARD 11)
 
 find_package(OpenGL REQUIRED)
 
-find_package(XFixes QUIET)
-if (XFixes_FOUND)
-    target_link_libraries(cstrl PRIVATE XFixes)
-endif ()
+find_package(X11 QUIET)
 
 add_library(log.c SHARED
         extern/log.c/log.c
@@ -87,6 +84,9 @@ add_executable(cstrl-sandbox
 )
 
 target_link_libraries(cstrl PRIVATE log.c ${OPENGL_LIBRARIES} m)
+if (X11_FOUND)
+    target_link_libraries(cstrl PRIVATE Xfixes)
+endif ()
 target_link_libraries(cstrl-test PRIVATE log.c cstrl m)
 target_link_libraries(cstrl-sandbox PRIVATE cstrl m)
 
