Add text rendering support with TrueType library
Introduced stb_truetype.h for handling TrueType font files, enabling features like parsing files and rendering glyphs with antialiasing. Also updated cstrl_ui_context to include font-related rendering components, supporting enhanced text rendering capabilities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ add_library(cstrl SHARED
         src/util/general_helpers.c
         include/cstrl/cstrl_ui.h
         src/ui/ui.c
+        extern/stb/stb_truetype.c
+        extern/stb/stb_truetype.h
+        extern/stb/stb_image_write.c
+        extern/stb/stb_image_write.h
 )
 
 add_executable(cstrl-test
