Added Linux/X11 support for Vulkan, fixed some memory leaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(cstrl SHARED
         include/cstrl/cstrl_camera.h
         src/renderer/vulkan/vulkan_platform.h
         src/renderer/vulkan/vulkan_platform_win32.c
+        src/renderer/vulkan/vulkan_platform_linux.c
 )
 
 add_executable(cstrl-test
