AI/Player refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_C_STANDARD 11)
 
-set(CMAKE_C_FLAGS_RELEASE "-O3")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
+
+# For CLion for some reason
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 find_package(OpenGL)
 
@@ -144,6 +147,8 @@ add_executable(cstrl-sandbox
         sandbox/planet/game/sphere.h
         sandbox/planet/helpers/helpers.c
         sandbox/planet/helpers/helpers.h
+        sandbox/planet/game/ai.c
+        sandbox/planet/game/ai.h
 )
 
 target_compile_options(cstrl PRIVATE -DCSTRL_EXPORT)
