--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,7 @@ if (UNIX)
     target_link_libraries(cstrl PRIVATE m)
     target_link_libraries(cstrl-test PRIVATE m)
     target_link_libraries(cstrl-sandbox PRIVATE m)
+    target_link_libraries(cstrl-bpc-game PRIVATE m)
 endif ()
 if (ANDROID)
     target_link_libraries(cstrl PRIVATE EGL)
