Linux audio support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,13 @@ find_package(Vulkan)
 
 if (WIN32)
     set(OPENAL_SDK "C:/Program Files (x86)/OpenAL 1.1 SDK")
+    include_directories("${OPENAL_SDK}/include")
+    link_directories("${OPENAL_SDK}/libs/Win64")
+    set(OPENAL_LIBRARY "OpenAL32.lib")
 else ()
-    set(OPENAL_SDK "")
+    find_package(OpenAL)
+    set(OPENAL_LIBRARY OpenAL::OpenAL)
 endif ()
-include_directories("${OPENAL_SDK}/include")
-link_directories("${OPENAL_SDK}/libs/Win64")
 
 find_package(X11 QUIET)
 
@@ -223,7 +225,7 @@ if (SIMULATION)
     target_compile_options(cstrl-bpc-game PRIVATE -DSIMULATION)
 endif ()
 
-target_link_libraries(cstrl PRIVATE log_c ${OPENGL_LIBRARIES} OpenAL32.lib)
+target_link_libraries(cstrl PRIVATE log_c ${OPENGL_LIBRARIES} ${OPENAL_LIBRARY})
 if (X11_FOUND)
     target_link_libraries(cstrl PRIVATE Xfixes)
 endif ()
