--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ endif ()
 
 find_package(X11 QUIET)
 
-add_library(log_c SHARED
+add_library(log_c STATIC
         extern/log.c/log.c
         extern/log.c/log.h)
 target_compile_options(log_c PRIVATE -DLOG_USE_COLOR)
