--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ endif ()
 
 find_package(X11 QUIET)
 
-add_library(log_c SHARED
+add_library(log_c STATIC
         extern/log.c/log.c
         extern/log.c/log.h)
 target_compile_options(log_c PRIVATE -DLOG_USE_COLOR)
@@ -224,6 +224,8 @@ add_executable(cstrl-cozy-game
         games/cozy/game/entities/butterfly.h
         games/cozy/game/entities/guy.c
         games/cozy/game/entities/guy.h
+        games/cozy/game/entities/hero.c
+        games/cozy/game/entities/hero.h
 )
 
 #target_compile_options(cstrl PRIVATE -DCSTRL_EXPORT -Wall -Werror -Wno-missing-braces)
